k8s-configs/cluster-tools/base/monitoring/prometheus/prometheus-agent.yaml
# For more information on prometheus configuration go to https://prometheus.io/docs/prometheus/latest/configuration/configuration/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-agent
  namespace: prometheus
  labels:
    app: prometheus-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-agent
  template:
    metadata:
      labels:
        app: prometheus-agent
    spec:
      serviceAccountName: prometheus
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
      containers:
      - name: prometheus
        image: public.ecr.aws/r2h3l6e4/pingcloud-clustertools/prom/prometheus:v2.47.0
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--web.enable-lifecycle"
          - "--enable-feature=agent"
          - "--enable-feature=expand-external-labels"
        volumeMounts:
          - name: prometheus-config-volume
            mountPath: /etc/prometheus/
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: 500m
            memory: 4000Mi
          requests:
            cpu: 100m
            memory: 512Mi
      volumes:
      - name: prometheus-config-volume
        configMap:
          name: prometheus-agent-config


---
